; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_free_blocks_count_add.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_blknum.c_ext2fs_free_blocks_count_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ext2_super_block = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext2fs_free_blocks_count_add(%struct.ext2_super_block* %0, i64 %1) #0 {
  %3 = alloca %struct.ext2_super_block*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.ext2_super_block* %0, %struct.ext2_super_block** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.ext2_super_block*, %struct.ext2_super_block** %3, align 8
  %7 = call i64 @ext2fs_free_blocks_count(%struct.ext2_super_block* %6)
  %8 = load i64, i64* %4, align 8
  %9 = add nsw i64 %7, %8
  store i64 %9, i64* %5, align 8
  %10 = load %struct.ext2_super_block*, %struct.ext2_super_block** %3, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @ext2fs_free_blocks_count_set(%struct.ext2_super_block* %10, i64 %11)
  ret void
}

declare dso_local i64 @ext2fs_free_blocks_count(%struct.ext2_super_block*) #1

declare dso_local i32 @ext2fs_free_blocks_count_set(%struct.ext2_super_block*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
